# SMAI-M25

A1/: 1.ipynb  2.ipynb  3.ipynb  README.md  main.py  pyproject.toml
A2/: 1.ipynb  2.ipynb  3.ipynb
A3/: .gitignore  1.ipynb  2.ipynb  3.ipynb  pyproject.toml
A3/Q2-results/cat_fourier_15/: model.npz
A3/Q2-results/cat_fourier_25/: model.npz
A3/Q2-results/cat_fourier_5/: model.npz
A3/Q2-results/cat_poly_15/: model.npz
A3/Q2-results/cat_poly_25/: model.npz
A3/Q2-results/cat_poly_5/: model.npz
A3/Q2-results/cat_raw/: model.npz
A3/Q2-results/smiley_fourier_15/: model.npz
A3/Q2-results/smiley_fourier_25/: model.npz
A3/Q2-results/smiley_fourier_5/: model.npz
A3/Q2-results/smiley_poly_15/: model.npz
A3/Q2-results/smiley_poly_25/: model.npz
A3/Q2-results/smiley_poly_5/: model.npz
A3/Q2-results/smiley_raw/: model.npz
A4/: .gitignore  Q1.ipynb  Q2.ipynb  pyproject.toml
A4/Q3/: hw4_notebook.ipynb  select_best_binary_split.py  train_tree.py  tree_utils.py
A5/: Q1.ipynb  Q2.ipynb  Q3.ipynb  Q3_Report.md  Q4.ipynb  Q4_Vdo.ipynb  pyproject.toml
